# android-mcp-server

./: README.md  config.yaml.example  pyproject.toml
badlog/: __init__.py  adb.py  classification.py  cli.py  config.py  doctor.py  events.py  evidence.py  incidents.py  reconnect.py  recorder.py  report.py  reset_reason.py  ring.py  rules.py  timeline.py  timeutils.py  tool_logging.py
badlog/rules/: default_rules.yaml
rules/: README.md  default_rules.yaml
tests/: test_classification.py  test_config.py  test_incidents.py  test_post_context.py  test_reconnect.py  test_reset_reason.py  test_ring.py  test_rules.py
tests/fixtures/: expected_event.json  sample_logcat.txt
