[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "badlog"
version = "0.1.0"
description = "BadLog - Android log anomaly recorder"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6.0",
    "PyYAML>=6.0",
    "typer>=0.12.0",
]

[project.scripts]
badlog = "badlog.cli:app"

[project.optional-dependencies]
test = ["pytest>=8.0.0", "pytest-cov>=4.0.0"]

[tool.setuptools]
packages = ["badlog"]

[tool.setuptools.package-data]
badlog = ["rules/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["--strict-markers", "--disable-warnings", "-v"]
